--- a/packaging/control
+++ b/packaging/control
@@ -1,5 +1,5 @@
 Package: palera1n
-Name: palera1n
+Name: kittyra1n
 Version: @DEB_VERSION@
 Architecture: @DEB_ARCH@
 Maintainer: palera1n team
@@ -9,7 +9,7 @@ Section: Utilities
 Priority: optional
 Homepage: https://palera.in
 Description: iOS 15.0+ semi-tethered checkm8 jailbreak
- palera1n is an iOS/iPadOS 15.0+ semi tethered jailbreak
+ kittyra1n is an iOS/iPadOS 15.0+ semi tethered jailbreak
  based on the checkm8 exploit.
  .
  palera1n is able to jailbreak the device in fakefs-rootful mode,
